polishing for launch

--- a/config.toml
+++ b/config.toml
@@ -31,3 +31,6 @@ theme = "hyde-hyde"
     identifier = "about"
     weight = 200
     url = "/about/"
+
+[markup.goldmark.renderer]
+    unsafe= true
